--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - uses: tgymnich/fork-sync@v1.2.1
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           owner: Yidadaa
           base: master
           head: master
